# Unnamed

./: .gitignore  CI-CD-IMPROVEMENTS.md  CI_CD_TROUBLESHOOTING.md  Cargo.toml  Dockerfile.optimized  LICENSE  README.md  clippy.toml  config.toml  kernel.toml  rustfmt.toml  sqlx-data.json
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
.github/actions/cache-cargo/: action.yml
.github/workflows/: README.md  build-test.yml  build.yml  ci-optimized.yml  ci-pr.yml  ci-sccache.yml  ci-simple.yml  ci.yml  cross-platform-test.yml  release.yml
docs/: ci-cd-best-practices.md  self-hosted-runner.md
frontend/: .gitignore  debug.html  index.html  package-lock.json  package.json  vite.config.js
frontend/components/debug-console/: debug-console.css
frontend/components/onboarding/: onboarding.css  onboarding.js
frontend/components/plugin-selector/: plugin-selector.css
frontend/js/: main-module.js  main.js  tauri-api.js  utils.js
frontend/src/: main.js
migrations/: 20240717000001_plugin_data.sql  20240717000002_plugin_metadata.sql  20250801000001_dashboard_layouts.sql
plugin-sdk/: Cargo.toml  README.md
plugin-sdk/src/: error.rs  host.rs  lib.rs  macros.rs  message.rs  plugin.rs  testing.rs  utils.rs
plugins/echo/: Cargo.toml
plugins/echo/src/: lib.rs
plugins/hello/: Cargo.toml
plugins/hello/src/: lib.rs
plugins/minimal-test/: Cargo.toml
plugins/minimal-test/src/: lib.rs
plugins/simple-test/: Cargo.toml
plugins/simple-test/src/: lib.rs
plugins/storage-test/: Cargo.toml
plugins/storage-test/src/: lib.rs
plugins/system-stats-collector/: Cargo.toml
plugins/system-stats-collector/src/: lib.rs
plugins/template/: Cargo.toml  README.md
plugins/template/src/: lib.rs
plugins/test-macro/: Cargo.toml
plugins/test-macro/src/: lib.rs
plugins/test_receiver/: Cargo.toml
plugins/test_receiver/src/: lib.rs
plugins/test_sender/: Cargo.toml
plugins/test_sender/src/: lib.rs
plugins/ui-system-monitor/: index.html  manifest.json  plugin.js
scripts/: ci-dashboard.sh
src/: config.rs  index.html  lib.rs  log_collector.rs  main-module.js  main.rs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  bridge.rs  container.rs  main.rs  plugin_creator.rs  plugin_watcher.rs  system_monitor.rs
src-tauri/src/permissions/: app-commands.toml
src/debug-console/: debug-console.js
src/health/: aggregator.rs  fhir.rs  mod.rs
src/identity/: mod.rs
src/kernel/: dependency_resolver.rs  host_functions.rs  manifest.rs  message.rs  message_bus.rs  mod.rs  plugin_loader.rs
src/onboarding/: onboarding.js
src/plugin-creator/: plugin-creator.css  plugin-creator.js
src/plugin-selector/: plugin-selector.js
src/plugins/system-monitor/: index.js  manifest.json
src/storage/: layout.rs  mod.rs
tests/: e2e_message_test.rs  identity_test.rs  integration_test.rs  message_passing_test.rs  pubsub_test.rs  simple_plugin_test.rs
