[package]
name = "plugin-sdk"
version = "0.1.0"
edition = "2021"
authors = ["hpeXt"]
description = "最小化内核插件 SDK"
license = "MIT"

[lib]
crate-type = ["rlib"]

[dependencies]
# Extism PDK
extism-pdk = "1.4.1"                          # 插件开发工具包

# 序列化（插件内使用）
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 时间处理 - 移除 chrono，使用主机函数
# chrono = { version = "0.4", features = ["serde"] }

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 宏开发
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

# 日志
log = "0.4"

# 测试辅助
uuid = { version = "1.0", features = ["v4", "js"] }