[package]
name = "template-plugin"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "标准插件模板 - 展示正确的主机函数使用方式"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Plugin SDK - 提供插件开发的便利工具和抽象
plugin-sdk = { path = "../../plugin-sdk" }

# Extism PDK - WebAssembly 插件开发工具包
extism-pdk = "1.0"

# 序列化支持
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID 生成（注意：对于 wasm32 目标需要特定 features）
uuid = { version = "1.0", features = ["v4", "js"] }

[dev-dependencies]
# 测试框架
tokio-test = "0.4"